root/registry/kube-registry-auth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-registry-auth
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: kube-registry-auth
        version: 0.0.1
    spec:
      volumes:
      - name: registry-config
        hostPath:
          path: "/root/registry/config"
      containers:
      - name: auth
        image: cesanta/docker_auth:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        volumeMounts:
          - mountPath: /config
            name: registry-config
---
apiVersion: v1
kind: Service
metadata:
  name: kube-registry-auth
  namespace: kube-system
spec:
  selector:
    k8s-app: kube-registry-auth
    version: 0.0.1
  ports:
  - port: 5001
    targetPort: 5001
