root/registry/kube-registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-registry-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - image.example.com
    secretName: kube-registry-secret
  rules:
  - host: image.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-registry
          servicePort: 5000
      - path: /auth
        backend:
          serviceName: kube-registry-auth
          servicePort: 5001
